🎨 Fix spacing between images and headers in posts

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -249,6 +249,11 @@ blockquote {
     @apply mt-medium mb-small;
   }
 
+  span + h3,
+  img + h3 {
+    @apply mt-large;
+  }
+
   .header-link {
     @apply hidden md:block;
 
